--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <h1>Sweaters</h1>
     </div>
-    <img src="/image/navtab.png" alt="" id="first">
-    <img src="/image/portfolio 4.jpg" alt="" id="second">
-    <img src="/image/portfolio 5.png" alt="" id="third">
+    <img src="/image/navtab.png" alt="not found" id="first">
+    <img src="/image/portfolio 4.jpg" alt="not found" id="second">
+    <img src="/image/portfolio 5.png" alt="not found" id="third">
     <footer>
         <div id="footer-content">
             <p>© 2024 Demo Company</p>
